--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,7 @@ dependencies {
     implementation libs.constraintlayout
     implementation libs.firebase.analytics
     implementation libs.firebase.database
+    implementation platform('com.google.firebase:firebase-bom:33.12.0')
     implementation 'org.apache.poi:poi:5.2.5'
     implementation 'org.apache.poi:poi-ooxml:5.2.5'
     implementation 'com.github.Piashsarker:AndroidAppUpdateLibrary:1.0.4'
