--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,9 +14,9 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher_apr"
+        android:icon="@mipmap/ic_launcher_ipev"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_apr_round"
+        android:roundIcon="@mipmap/ic_launcher_ipev_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Controle_mat"
         tools:targetApi="31">
