--- a/build.gradle
+++ b/build.gradle
@@ -10,4 +10,5 @@ buildscript {
 
 plugins {
 alias(libs.plugins.androidApplication) apply false
+    id 'com.google.gms.google-services' version '4.4.2' apply false
 }
