--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,8 +19,8 @@ android {
         applicationId "com.ipev.controle_material"
         minSdk 26
         targetSdk 34
-        versionCode 1
-        versionName "1.1"
+        versionCode 2
+        versionName "1.0.1"
 
     }
 
@@ -53,7 +53,12 @@ dependencies {
     implementation libs.firebase.analytics
     implementation libs.firebase.database
     implementation platform('com.google.firebase:firebase-bom:33.12.0')
+    implementation 'com.google.firebase:firebase-firestore:24.10.0'
+    implementation 'com.google.android.gms:play-services-auth'
+    implementation 'com.google.code.gson:gson:2.10.1'
     implementation 'org.apache.poi:poi:5.2.5'
     implementation 'org.apache.poi:poi-ooxml:5.2.5'
     implementation 'com.github.Piashsarker:AndroidAppUpdateLibrary:1.0.4'
+    implementation libs.swiperefreshlayout
+    implementation libs.firebase.auth
 }
