--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,10 @@
             android:name=".pendencias"
             android:exported="false" />
         <activity
+            android:name=".Login_Cadastro"
+            android:exported="false" />
+        <activity
+
             android:name=".Estatisticas"
             android:exported="false"
             android:screenOrientation="portrait" />
@@ -66,6 +70,9 @@
             android:exported="false"
             android:screenOrientation="portrait" />
         <activity
+            android:name=".ExportLocal"
+            android:exported="false"/>
+        <activity
             android:name=".Buscar_BMP"
             android:exported="false"
             android:screenOrientation="portrait" />
@@ -92,6 +99,15 @@
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/provider_paths" />
+        </provider>
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="${applicationId}.provider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths" />
         </provider>
     </application>
 
